<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="1430px"
    android:layout_height="600px"
    android:orientation="vertical"
    android:background="@drawable/dialog_update_notitle"
    android:theme="@style/UpdateDialogTheme">

    <TextView
        android:id="@+id/dialog_update_condition_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"
        android:textSize="40px"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:text="@string/update_condition"/>

    <LinearLayout
        android:id="@+id/dialog_update_condition_ll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40px"
        android:layout_marginLeft="390px"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_update_condition_isIgniteAccOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="30px"
            android:gravity="start|center_vertical"
            android:textSize="40px"
            android:textColor="@android:color/white"
            android:text="@string/condition_isIgniteAccOn"
            android:drawableLeft="@drawable/condition_false"/>

        <TextView
            android:id="@+id/dialog_update_condition_isSpeedZero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="30px"
            android:gravity="start|center_vertical"
            android:textSize="40px"
            android:textColor="@android:color/white"
            android:text="@string/condition_isSpeedZero"
            android:drawableLeft="@drawable/condition_false"/>

        <TextView
            android:id="@+id/dialog_update_condition_isParkBrake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="30px"
            android:gravity="start|center_vertical"
            android:textSize="40px"
            android:textColor="@android:color/white"
            android:text="@string/condition_isParkBrake"
            android:drawableLeft="@drawable/condition_false"/>

        <TextView
            android:id="@+id/dialog_update_condition_isGearPark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="30px"
            android:gravity="start|center_vertical"
            android:textSize="40px"
            android:textColor="@android:color/white"
            android:text="@string/condition_isGearPark"
            android:drawableLeft="@drawable/condition_false"/>

        <TextView
            android:id="@+id/dialog_update_condition_isEngineOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="30px"
            android:gravity="start|center_vertical"
            android:textSize="40px"
            android:textColor="@android:color/white"
            android:text="@string/condition_isEngineOff"
            android:drawableLeft="@drawable/condition_false"/>

        <TextView
            android:id="@+id/dialog_update_condition_isBatteryOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="30px"
            android:gravity="start|center_vertical"
            android:textSize="40px"
            android:textColor="@android:color/white"
            android:text="@string/condition_isBatteryOk"
            android:drawableLeft="@drawable/condition_false"
            android:visibility="gone"/>
    </LinearLayout>

    <TextView
        android:id="@+id/dialog_update_condition_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="30px"
        android:textColor="#0054ff"
        android:text="@string/update_warning"
        android:gravity="center"
        android:layout_marginTop="34px"/>

    <Button
        android:id="@+id/dialog_update_condition_cancel"
        android:layout_width="260px"
        android:layout_height="80px"
        android:layout_marginTop="22px"
        android:layout_gravity="center"
        android:background="@drawable/selector_button"
        android:text="@string/update_cancel"/>
</LinearLayout>