<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="1430px"
    android:layout_height="600px"
    android:layout_marginLeft="120px"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:theme="@style/UpdateDialogTheme"
    android:background="@drawable/dialog_update_notitle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"
        android:text="@string/update_warning_title"
        android:textSize="34px"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom|center_horizontal"
        android:layout_marginTop="58px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_warning_content1"
            android:textColor="@android:color/white"
            android:textSize="32px" />

        <TextView
            android:id="@+id/dialog_update_warning_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="30"
            android:textColor="#0054ff"
            android:textSize="40px"
            android:layout_marginLeft="16px"
            android:layout_marginRight="16px"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_warning_content2"
            android:textColor="@android:color/white"
            android:textSize="32px" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_warning_content3"
        android:drawableLeft="@drawable/warning"
        android:drawablePadding="16px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="34px"
        android:textSize="30px"
        android:textColor="@android:color/white"
        android:gravity="center_vertical"/>

    <View
        android:layout_width="1400px"
        android:layout_height="1px"
        android:layout_marginTop="128px"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center" >

        <Button
            android:id="@+id/dialog_update_warning_btn1"
            android:layout_width="260px"
            android:layout_height="80px"
            android:textSize="32px"
            android:textColor="#21365e"
            android:text="@string/update_now"
            android:background="@drawable/selector_button" />

        <Button
            android:id="@+id/dialog_update_warning_btn2"
            android:layout_width="260px"
            android:layout_height="80px"
            android:textSize="32px"
            android:textColor="#21365e"
            android:layout_marginLeft="280px"
            android:text="@string/update_later"
            android:background="@drawable/selector_button" />
    </LinearLayout>
</LinearLayout>