<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="1430px"
    android:layout_height="600px"
    android:layout_marginLeft="120px"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:theme="@style/UpdateDialogTheme"
    android:background="@drawable/dialog_update_no_title">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100px"
        android:text="@string/update_warning_title"
        android:textColor="@color/dialog_message"
        android:textSize="34px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="205px"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_warning_content1"
            android:textColor="@color/dialog_message"
            android:textSize="32px" />

        <TextView
            android:id="@+id/dialog_update_warning_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16px"
            android:layout_marginRight="16px"
            android:textColor="#ff9000"
            android:textSize="40px"
            tools:text="30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_warning_content2"
            android:textColor="@color/dialog_message"
            android:textSize="32px" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/warning"
        android:drawablePadding="16px"
        android:layout_marginTop="275px"
        android:gravity="center_vertical"
        android:text="@string/update_warning_content3"
        android:textColor="@color/dialog_message"
        android:textSize="30px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="1400px"
        android:layout_height="1px"
        android:layout_marginBottom="160px"
        android:layout_gravity="center_horizontal"
        android:background="@color/dialog_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160px"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/dialog_warning_btn1"
            android:layout_width="260px"
            android:layout_height="80px"
            android:background="@drawable/selector_button_click"
            android:gravity="center"
            android:text="@string/update_now"
            android:textSize="@dimen/common_font"
            android:textColor="@drawable/selector_button_text_click" />

        <Button
            android:id="@+id/dialog_warning_btn2"
            android:layout_width="260px"
            android:layout_height="80px"
            android:layout_marginLeft="280px"
            android:background="@drawable/selector_button_click"
            android:gravity="center"
            android:text="@string/update_later"
            android:textSize="@dimen/common_font"
            android:textColor="@drawable/selector_button_text_click" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>