<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="1430px"
    android:layout_height="600px"
    android:layout_marginLeft="120px"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/UpdateDialogTheme"
    android:background="@drawable/dialog_update_notitle">

    <TextView
        android:id="@+id/dialog_update_schedule_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/setting_update_time"
        android:textSize="34px"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginTop="60px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    
    <TextView
        android:id="@+id/dialog_update_schedule_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_update_start_time"
        android:textSize="30px"
        android:textColor="@android:color/white"
        android:layout_marginTop="105px"
        android:layout_marginLeft="148px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    
    <com.coagent.jac.s7.fota.widget.TimePicker
        android:id="@+id/dialog_update_schedule_time_picker"
        android:layout_width="475px"
        android:layout_height="210px"
        android:layout_marginTop="14px"
        android:layout_marginLeft="148px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_update_schedule_start_time"/>

    <TextView
        android:id="@+id/dialog_update_schedule_warning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/setting_update_warning"
        android:textSize="30px"
        android:textColor="@android:color/white"
        android:layout_marginTop="148px"
        android:layout_marginRight="140px"
        android:layout_marginLeft="150px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/dialog_update_schedule_time_picker"/>

    <TextView
        android:id="@+id/dialog_update_schedule_warning2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/setting_update_warning2"
        android:textSize="30px"
        android:textColor="@android:color/white"
        android:layout_marginTop="40px"
        android:layout_marginRight="140px"
        android:layout_marginLeft="150px"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_update_schedule_warning"
        app:layout_constraintLeft_toRightOf="@id/dialog_update_schedule_time_picker"/>
    
    <LinearLayout
        android:id="@+id/dialog_update_schedule_time_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="50px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_update_schedule_time_picker">

        <TextView
            android:id="@+id/dialog_update_schedule_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32px"
            android:textColor="#0054ff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_update_des"
            android:textSize="32px"
            android:textColor="@android:color/white"
            android:layout_marginLeft="18px"/>
    </LinearLayout>
    
    <Button
        android:id="@+id/dialog_update_schedule_btn"
        android:layout_width="260px"
        android:layout_height="80px"
        android:textSize="32px"
        android:text="@string/setting_update_btn"
        android:textColor="#21365e"
        android:layout_marginTop="36px"
        android:background="@drawable/selector_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_update_schedule_time_ll"/>
</android.support.constraint.ConstraintLayout>